Use \Sort in Path and =
This severely breaks arend-lib